독서/Kubernetes-in-action/PART2/files/daemonset.yaml
apiVersion: apps/v1 # DaemonSet manifest 정의
kind: DaemonSet
metadata:
  name: kubia
spec:
  selector:
    matchLabels:
      app: kubia
  template: # Pod 템플릿은 ReplicationController와 동일하게 정의
    metadata:
      labels:
        app: kubia
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
      - name: kubia
        image: luksa/kubia:2.0
